# plant_buddies

./: LICENSE  README.md  main.py  pyproject.toml
data/: companions.csv  types.csv
poly_grouper/: evolutionary_grouper.py
